@@ -17,19 +17,12 @@ package org.apache.solr.cloud;
  * limitations under the License.
  */
 
-import java.io.IOException;
-
 import org.apache.lucene.util.LuceneTestCase.Slow;
 import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest.Create;
-import org.apache.solr.client.solrj.request.CollectionAdminRequest.RequestStatus;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest.SplitShard;
-import org.apache.solr.client.solrj.response.CollectionAdminResponse;
-import org.apache.solr.common.util.NamedList;
-import org.apache.solr.update.DirectUpdateHandler2;
 import org.junit.Test;
 
 /**
@@ -89,28 +82,5 @@ public class CollectionsAPIAsyncDistributedZkTest extends AbstractFullDistribZkT
   
       assertEquals("Shard split did not complete. Last recorded state: " + state, "completed", state);
     }
-  }
-
-  private String getRequestStateAfterCompletion(String requestId, int waitForSeconds, SolrClient client)
-      throws IOException, SolrServerException {
-    String state = null;
-    while(waitForSeconds-- > 0) {
-      state = getRequestState(requestId, client);
-      if(state.equals("completed") || state.equals("failed"))
-        return state;
-      try {
-        Thread.sleep(1000);
-      } catch (InterruptedException e) {
-      }
-    }
-    return state;
-  }
-
-  private String getRequestState(String requestId, SolrClient client) throws IOException, SolrServerException {
-    RequestStatus request = new RequestStatus();
-    request.setRequestId(requestId);
-    CollectionAdminResponse response = request.process(client);
-    NamedList innerResponse = (NamedList) response.getResponse().get("status");
-    return (String) innerResponse.get("state");
   }
 }
